<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:alpha="0"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:text="@string/restart"
            android:translationY="@dimen/initial_y_translation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grid" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/score_cl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".MainActivity">

                <ImageView
                    android:id="@+id/side_cross_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:transitionName="@string/iv_transition_x"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/x_score_tv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/vec_x_anim_2" />

                <TextView
                    android:id="@+id/x_score_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/score_0"
                    android:textSize="@dimen/score_size"
                    app:layout_constraintBottom_toBottomOf="@+id/side_cross_iv"
                    app:layout_constraintEnd_toStartOf="@+id/delimiter_tv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/side_cross_iv"
                    app:layout_constraintTop_toTopOf="@+id/side_cross_iv" />

                <TextView
                    android:id="@+id/delimiter_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/delimiter"
                    android:textSize="@dimen/score_size"
                    app:layout_constraintBottom_toBottomOf="@+id/x_score_tv"
                    app:layout_constraintEnd_toStartOf="@+id/o_score_tv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/x_score_tv"
                    app:layout_constraintTop_toTopOf="@+id/x_score_tv" />

                <TextView
                    android:id="@+id/o_score_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/score_0"
                    android:textSize="@dimen/score_size"
                    app:layout_constraintBottom_toBottomOf="@+id/x_score_tv"
                    app:layout_constraintEnd_toStartOf="@+id/side_zero_iv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/delimiter_tv"
                    app:layout_constraintTop_toTopOf="@+id/x_score_tv" />

                <ImageView
                    android:id="@+id/side_zero_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:transitionName="@string/iv_transition_o"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/o_score_tv"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/vec_o_anim_2" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <org.iskopasi.tictactoe.utils.GridCardView
            android:id="@+id/grid"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.24000001" />
    </android.support.constraint.ConstraintLayout>
</layout>